1: $$ instead of prefix in filenames in db. 2: pqserve version number in db table *_info

--- a/src/pqinit/Makefile
+++ b/src/pqinit/Makefile
@@ -5,5 +5,12 @@ IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; es
 
 BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
 
-../../bin/pqinit: *.go
+../../bin/pqinit: directories_generated.go pqinit.go
 	go build $(BUILD) -o $@ $(OPTS) .
+
+directories_generated.go: ../pqserve/directories.go
+	rm -f directories_generated.go
+	echo '// GENERATED FILE. DO NOT EDIT.' > directories_generated.go
+	echo >> directories_generated.go
+	cat ../pqserve/directories.go >> directories_generated.go
+	chmod 444 directories_generated.go
