--- a/src/pqsetquota/Makefile
+++ b/src/pqsetquota/Makefile
@@ -5,6 +5,12 @@ IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; es
 
 BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
 
-../../bin/pqsetquota: *.go
+../../bin/pqsetquota: directories_generated.go pqsetquota.go
 	go build $(BUILD) -o $@ $(OPTS) .
 
+directories_generated.go: ../pqserve/directories.go
+	rm -f directories_generated.go
+	echo '// GENERATED FILE. DO NOT EDIT.' > directories_generated.go
+	echo >> directories_generated.go
+	cat ../pqserve/directories.go >> directories_generated.go
+	chmod 444 directories_generated.go
