--- a/src/pqbuild/Makefile
+++ b/src/pqbuild/Makefile
@@ -1,7 +1,7 @@
 
 include ../Makefile.cfg
 
-SRC = dbxml_false.go dbxml_true.go ranges_generated.go directories_generated.go version_generated.go pqbuild.go
+SRC = dbxml_false.go dbxml_true.go ranges_generated.go directories_generated.go pqbuild.go
 
 IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; esac'},=, }
 
@@ -23,10 +23,3 @@ directories_generated.go: ../pqserve/directories.go
 	echo >> directories_generated.go
 	cat ../pqserve/directories.go >> directories_generated.go
 	chmod 444 directories_generated.go
-
-version_generated.go: ../pqserve/version.go
-	rm -f version_generated.go
-	echo '// GENERATED FILE. DO NOT EDIT.' > version_generated.go
-	echo >> version_generated.go
-	cat ../pqserve/version.go >> version_generated.go
-	chmod 444 version_generated.go
