pqserve: weergave van UDs

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,6 +18,7 @@ ifneq "$(findstring paqu/_vendor, $(GOPATH))" ""
 	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go install github.com/pebbe/dbxml
 	go install github.com/pebbe/util
 	go install github.com/robertkrimen/otto
+	go install github.com/ungerik/go-cairo
 endif
 	mkdir -p ../bin
 	make -C pqserve
