pqudep: gebruik github.com/rug-compling/alud

--- a/src/pqudep/Makefile
+++ b/src/pqudep/Makefile
@@ -1,9 +1,9 @@
 
 include ../Makefile.cfg
 
-SRC = attributes_generated.go udep_generated.go pqudep.go fixpunct.go
+SRC = attributes_generated.go pqudep.go
 
-all: ../../bin/pqudep udep.diff
+all: ../../bin/pqudep
 
 ../../bin/pqudep: $(SRC)
 	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go build -o $@ $(TAGS) $(OPTS) .
@@ -11,15 +11,3 @@ all: ../../bin/pqudep udep.diff
 attributes_generated.go: ../pqserve/attributes_generated.go mkAttribs
 	./mkAttribs < $< > $@
 
-udep_generated.go: udep.xq
-	rm -f $@
-	echo '// GENERATED FILE. DO NOT EDIT.' > $@
-	echo >> $@
-	echo package main >> $@
-	echo >> $@
-	echo 'var udep = `' >> $@
-	cat $< >> $@
-	echo '`' >> $@
-
-udep.diff: udep.xq universal_dependencies_2019_06_13.xq
-	-diff -U10 -b universal_dependencies_2019_06_13.xq udep.xq > udep.diff
