--- a/src/pqbuild/Makefile
+++ b/src/pqbuild/Makefile
@@ -8,7 +8,7 @@ IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; es
 BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
 
 ../../bin/pqbuild: $(SRC)
-	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go build $(BUILD) -o $@ $(TAGS) $(OPTS) .
+	$(GO) build $(BUILD) -o $@ $(TAGS) $(OPTS) .
 
 ranges_generated.go: ../pqserve/ranges.go
 	rm -f ranges_generated.go
