--- a/src/pqconllu/Makefile
+++ b/src/pqconllu/Makefile
@@ -2,4 +2,4 @@
 include ../Makefile.cfg
 
 ../../bin/pqconllu: *.go
-	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go build $(BUILD) -o $@ $(TAGS) $(OPTS) .
+	$(GO) build $(BUILD) -o $@ $(TAGS) $(OPTS) .
