--- a/src/pqstatus/Makefile
+++ b/src/pqstatus/Makefile
@@ -6,7 +6,7 @@ IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; es
 BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
 
 ../../bin/pqstatus: directories_generated.go pqstatus.go
-	go build $(BUILD) -o $@ $(OPTS) .
+	$(GO) build $(BUILD) -o $@ $(OPTS) .
 
 directories_generated.go: ../pqserve/directories.go
 	rm -f directories_generated.go
