--- a/src/pqxok/Makefile
+++ b/src/pqxok/Makefile
@@ -2,4 +2,4 @@
 include ../Makefile.cfg
 
 ../../bin/pqxok: *.go
-	CGO_LDFLAGS="-Wl,-rpath=$(LIBRARY_PATH)" go build -o $@ $(TAGS) $(OPTS) .
+	$(GO) build -o $@ $(TAGS) $(OPTS) .
