pqserve: spod: spod2xpath (work in progess)

--- a/src/pqserve/Makefile
+++ b/src/pqserve/Makefile
@@ -5,7 +5,11 @@ IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; es
 
 BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
 
-all: attributes_generated.go ../../bin/pqserve
+all: attributes_generated.go spod2xpath.go ../../bin/pqserve
+
+spod2xpath.go: spoddata.go static/macros.txt spodmake.go
+	$(GO) run -tags spodmake spodmake.go spoddata.go static/macros.txt > spod2xpath.tmp && mv spod2xpath.tmp spod2xpath.go || touch spod2xpath.go
+	gofmt -w spod2xpath.go
 
 attributes_generated.go: attributes.txt tools/mkattribs.go
 	$(GO) run tools/mkattribs.go attributes.txt > attributes_generated.go
