--- a/src/pqbuild/Makefile
+++ b/src/pqbuild/Makefile
@@ -1,14 +1,14 @@
 
 include ../Makefile.cfg
 
-SRC = dbxml_false.go dbxml_true.go ranges_generated.go directories_generated.go pqbuild.go spod.go spoddata_generated.go xpath_generated.go spod2xpath_generated.go static_generated.go
+INTERNAL = \
+	../internal/dir/default.go \
+	../internal/dir/dir.go
 
-IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; esac'},=, }
+SRC = dbxml_false.go dbxml_true.go ranges_generated.go pqbuild.go spod.go spoddata_generated.go xpath_generated.go spod2xpath_generated.go static_generated.go
 
-BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
-
-../../bin/pqbuild: $(SRC)
-	$(GO) build $(BUILD) -o $@ $(TAGS) $(OPTS) .
+../../bin/pqbuild: $(SRC) $(INTERNAL)
+	$(GO) build -o $@ $(TAGS) $(OPTS) .
 
 ranges_generated.go: ../pqserve/ranges.go
 	rm -f ranges_generated.go
@@ -16,13 +16,6 @@ ranges_generated.go: ../pqserve/ranges.go
 	echo >> ranges_generated.go
 	cat ../pqserve/ranges.go >> ranges_generated.go
 	chmod 444 ranges_generated.go
-
-directories_generated.go: ../pqserve/directories.go
-	rm -f directories_generated.go
-	echo '// GENERATED FILE. DO NOT EDIT.' > directories_generated.go
-	echo >> directories_generated.go
-	cat ../pqserve/directories.go >> directories_generated.go
-	chmod 444 directories_generated.go
 
 spoddata_generated.go: ../pqserve/spoddata.go
 	rm -f spoddata_generated.go
@@ -47,3 +40,6 @@ static_generated.go: ../pqserve/static_generated.go
 	rm -f static_generated.go
 	cp ../pqserve/static_generated.go static_generated.go
 	chmod 444 static_generated.go
+
+../internal/dir/default.go:
+	make -C ../internal/dir
