--- a/src/pqserve/Makefile
+++ b/src/pqserve/Makefile
@@ -1,11 +1,13 @@
 
 include ../Makefile.cfg
 
-IS=${if ${shell sh -c 'case `go version` in go1.[01234].*) ;; *) echo yes; ;; esac'},=, }
+INTERNAL = \
+	../internal/dir/default.go \
+	../internal/dir/dir.go
 
-BUILD=${if $(DEFAULT_PAQU_DIR),-ldflags "-X main.DefaultPaquDir$(IS)$(DEFAULT_PAQU_DIR)", }
 
 all: attributes_generated.go spod2xpath.go ../../bin/pqserve
+
 
 spod2xpath.go: spoddata.go static/macros.txt spodmake.go
 	$(GO) run -tags spodmake spodmake.go spoddata.go static/macros.txt > spod2xpath.tmp && mv spod2xpath.tmp spod2xpath.go || touch spod2xpath.go
@@ -14,6 +16,9 @@ spod2xpath.go: spoddata.go static/macros.txt spodmake.go
 attributes_generated.go: attributes.txt tools/mkattribs.go
 	$(GO) run tools/mkattribs.go attributes.txt > attributes_generated.go
 
-../../bin/pqserve: *.go static/*.* static/Makefile attributes.txt tools/mkattribs.go
+../../bin/pqserve: *.go static/*.* static/Makefile attributes.txt tools/mkattribs.go $(INTERNAL)
 	make -C static
-	$(GO) build $(BUILD) -o $@ $(TAGS) $(OPTS) .
+	$(GO) build -o $@ $(TAGS) $(OPTS) .
+
+../internal/dir/default.go:
+	make -C ../internal/dir
