--- a/src/pqudep/Makefile
+++ b/src/pqudep/Makefile
@@ -1,13 +1,7 @@
 
 include ../Makefile.cfg
 
-SRC = attributes_generated.go pqudep.go
-
 all: ../../bin/pqudep
 
-../../bin/pqudep: $(SRC)
+../../bin/pqudep: *.go
 	$(GO) build -o $@ $(TAGS) $(OPTS) .
-
-attributes_generated.go: ../pqserve/attributes_generated.go mkAttribs
-	./mkAttribs < $< > $@
-
