--- a/src/pqconllu/Makefile
+++ b/src/pqconllu/Makefile
@@ -1,5 +1,5 @@
 
 include ../Makefile.cfg
 
-../../bin/pqconllu: *.go
+../../bin/pqconllu: *.go ../go.mod
 	$(GO) build $(BUILD) -o $@ $(TAGS) $(OPTS) .
