--- a/src/pqudep/Makefile
+++ b/src/pqudep/Makefile
@@ -3,5 +3,5 @@ include ../Makefile.cfg
 
 all: ../../bin/pqudep
 
-../../bin/pqudep: *.go
+../../bin/pqudep: *.go ../go.mod
 	$(GO) build -o $@ $(TAGS) $(OPTS) .
