--- a/src/pqupgrade/Makefile
+++ b/src/pqupgrade/Makefile
@@ -5,7 +5,7 @@ INTERNAL = \
 	../internal/dir/default.go \
 	../internal/dir/dir.go
 
-../../bin/pqupgrade: *.go $(INTERNAL)
+../../bin/pqupgrade: *.go ../go.mod $(INTERNAL)
 	$(GO) build $(BUILD) -o $@ $(OPTS) .
 
 ../internal/dir/default.go:
