mkattribs.go maakt nu gebruik van alpinods.Attribs()

--- a/src/internal/node/Makefile
+++ b/src/internal/node/Makefile
@@ -3,6 +3,6 @@ include ../../Makefile.cfg
 
 all: attribs.go
 
-attribs.go: attribs.txt mkattribs.go
-	$(GO) run mkattribs.go attribs.txt > attribs.tmp
+attribs.go: mkattribs.go ../../go.mod
+	$(GO) run mkattribs.go > attribs.tmp
 	mv attribs.tmp attribs.go
