--- a/src/pqdactx/Makefile
+++ b/src/pqdactx/Makefile
@@ -8,5 +8,5 @@ INTERNAL = \
 ../../bin/pqdactx: *.go ../go.mod $(INTERNAL)
 	$(GO) build -o $@ $(TAGS) $(OPTS) .
 
-../internal/node/attribs.go: ../internal/node/attribs.txt ../internal/node/mkattribs.go
+../internal/node/attribs.go: ../go.mod ../internal/node/mkattribs.go
 	make -C ../internal/node
