new: docs/index.json

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,5 +3,8 @@ all: index.rdf
 index.rdf: index.ttl
 	rapper -q -i turtle -o rdfxml-abbrev $< > $@
 
-index.ttl: ../codemeta.json
+index.ttl: index.json
 	./jsonld2ttl.py $< > $@
+
+index.json: ../codemeta.json
+	cp $< $@
