docs/index.json -> docs/index.jsonld

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,8 +3,8 @@ all: index.rdf
 index.rdf: index.ttl
 	rapper -q -i turtle -o rdfxml-abbrev $< > $@
 
-index.ttl: index.json
+index.ttl: index.jsonld
 	./jsonld2ttl.py $< > $@
 
-index.json: ../codemeta.json
+index.jsonld: ../codemeta.json
 	cp $< $@
