--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,10 +1,12 @@
 all: index.rdf
 
 index.rdf: index.ttl
-	rapper -q -i turtle -o rdfxml-abbrev $< > $@
+	rapper -q -i turtle -o rdfxml-abbrev $< > $@.tmp
+	mv $@.tmp $@
 
 index.ttl: index.jsonld
-	./jsonld2ttl.py $< > $@
+	./jsonld2ttl.py $< > $@.tmp
+	mv $@.tmp $@
 
 index.jsonld: ../codemeta.json
 	cp $< $@
